; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-ntrig.c_ntrig_set_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-ntrig.c_ntrig_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hid_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.hid_report** }
%struct.hid_report = type { i32 }

@__const.ntrig_set_mode.mode_commands = private unnamed_addr constant [4 x i32] [i32 14, i32 15, i32 27, i32 16], align 16
@HID_FEATURE_REPORT = common dso_local global i64 0, align 8
@HID_REQ_GET_REPORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hid_device*, i32)* @ntrig_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ntrig_set_mode(%struct.hid_device* %0, i32 %1) #0 {
  %3 = alloca %struct.hid_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.hid_report*, align 8
  %6 = alloca [4 x i32], align 16
  store %struct.hid_device* %0, %struct.hid_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = bitcast [4 x i32]* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %7, i8* align 16 bitcast ([4 x i32]* @__const.ntrig_set_mode.mode_commands to i8*), i64 16, i1 false)
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = icmp sgt i32 %11, 3
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %2
  br label %37

14:                                               ; preds = %10
  %15 = load %struct.hid_device*, %struct.hid_device** %3, align 8
  %16 = getelementptr inbounds %struct.hid_device, %struct.hid_device* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = load i64, i64* @HID_FEATURE_REPORT, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load %struct.hid_report**, %struct.hid_report*** %20, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds [4 x i32], [4 x i32]* %6, i64 0, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.hid_report*, %struct.hid_report** %21, i64 %26
  %28 = load %struct.hid_report*, %struct.hid_report** %27, align 8
  store %struct.hid_report* %28, %struct.hid_report** %5, align 8
  %29 = load %struct.hid_report*, %struct.hid_report** %5, align 8
  %30 = icmp ne %struct.hid_report* %29, null
  br i1 %30, label %32, label %31

31:                                               ; preds = %14
  br label %37

32:                                               ; preds = %14
  %33 = load %struct.hid_device*, %struct.hid_device** %3, align 8
  %34 = load %struct.hid_report*, %struct.hid_report** %5, align 8
  %35 = load i32, i32* @HID_REQ_GET_REPORT, align 4
  %36 = call i32 @hid_hw_request(%struct.hid_device* %33, %struct.hid_report* %34, i32 %35)
  br label %37

37:                                               ; preds = %32, %31, %13
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @hid_hw_request(%struct.hid_device*, %struct.hid_report*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
